# DTW-Sentence-Alignment

./: .gitignore  README.md  bash_upload.sh  pyproject.toml
src/dtwsa/: __init__.py  dtwsa.py  metrics.py  plotter.py
tests/: test_data.py  test_dtwsa.py
