[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "dtwsa"
version = "0.1.0"
authors = [
  { name="Vincenzo Timmel", email="vincenzo.timmel@fhnw.ch" },
]
description = "A package with a simple 1D-DTW implementation for sentence alignment."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "jiwer",
    "matplotlib"
]
[project.urls]
Homepage = "https://github.com/i4Ds/DTW-Sentence-Alignment"
Issues = "https://github.com/i4Ds/DTW-Sentence-Alignment/issues"